fix delete alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,36 @@
 html,
 body {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
-
 body {
-  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	line-height: 1.4em;
-	background: #f5f5f5;
-	color: #4d4d4d;
-	min-width: 230px;
-	max-width: 550px;
-	margin: 0 auto;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 1.4em;
+  background: #f5f5f5;
+  color: #4d4d4d;
+  min-width: 230px;
+  max-width: 550px;
+  margin: 0 auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   font-weight: 300;
 }
 
 button {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	background: none;
-	font-size: 100%;
-	vertical-align: baseline;
-	font-family: inherit;
-	font-weight: inherit;
-	color: inherit;
-	-webkit-appearance: none;
-	appearance: none;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  background: none;
+  font-size: 100%;
+  vertical-align: baseline;
+  font-family: inherit;
+  font-weight: inherit;
+  color: inherit;
+  -webkit-appearance: none;
+  appearance: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 h1,
@@ -97,10 +96,9 @@ p {
 
 .app-root {
   background: #fff;
-	margin: 130px 0 40px 0;
-	position: relative;
-	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
-0 25px 50px 0 rgba(0, 0, 0, 0.1);
+  margin: 130px 0 40px 0;
+  position: relative;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
 }
 
 .todoWrapper {
@@ -116,7 +114,7 @@ p {
 }
 
 .todoWrapper:last-child {
-	border-bottom: none;
+  border-bottom: none;
 }
 
 .inputWrapper {
@@ -124,7 +122,7 @@ p {
   justify-content: flex-end;
 }
 label {
-  color: #CCC;
+  color: #ccc;
   margin: 10px 18px;
   font-size: 30px;
   transform: rotate(90deg);
@@ -135,7 +133,7 @@ label {
   height: 28px;
   width: 28px;
   border-radius: 28px;
-  border: 1px solid #CCC;
+  border: 1px solid #ccc;
   background-color: #fff;
   color: #5dc2af;
   cursor: pointer;
@@ -146,7 +144,7 @@ label {
 
 .checkmark {
   margin-top: 5px;
-  margin-left:1px;
+  margin-left: 1px;
 }
 
 .detailWrapper {
@@ -166,8 +164,8 @@ label {
 }
 
 .todo-count {
-	float: left;
-	text-align: left;
+  float: left;
+  text-align: left;
 }
 
 .todo-right {
@@ -193,14 +191,14 @@ label {
 
 .destroy {
   position: absolute;
-  top: -3px;
+  top: 0px;
   right: -30px;
-	width: 20px;
-	height: 30px;
-	margin: auto 0 40px;
-	font-size: 30px;
-	color: #cc9a9a;
-	margin-bottom: 11px;
+  width: 20px;
+  height: 30px;
+  margin: auto 0 40px;
+  font-size: 30px;
+  color: #cc9a9a;
+  margin-bottom: 11px;
   transition: color 0.2s ease-out;
   cursor: pointer;
   opacity: 0.3;
@@ -212,43 +210,40 @@ label {
 
 .todoFooter {
   color: #777;
-	padding: 10px 15px;
-	height: 20px;
-	text-align: center;
+  padding: 10px 15px;
+  height: 20px;
+  text-align: center;
   border-top: 1px solid #e6e6e6;
-  display: 'flex';
+  display: "flex";
   position: relative;
-
 }
 
 :focus {
-	outline: 0;
+  outline: 0;
 }
 
 .todoFooter:before {
-	content: '';
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	height: 50px;
-	overflow: hidden;
-	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2),
-	            0 8px 0 -3px #f6f6f6,
-	            0 9px 1px -3px rgba(0, 0, 0, 0.2),
-	            0 16px 0 -6px #f6f6f6,
-	            0 17px 2px -6px rgba(0, 0, 0, 0.2);
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 50px;
+  overflow: hidden;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6,
+    0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6,
+    0 17px 2px -6px rgba(0, 0, 0, 0.2);
 }
 
 .filter {
   margin: 0;
-    padding: 0;
-    list-style: none;
-    position: absolute;
-    right: 0;
-    left: 0;
-    bottom: 5px;
-    box-sizing: border-box;
+  padding: 0;
+  list-style: none;
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 5px;
+  box-sizing: border-box;
 }
 
 .filter div {
@@ -257,7 +252,7 @@ label {
 }
 
 .filter div:hover {
-	border-color: rgba(175, 47, 47, 0.1);
+  border-color: rgba(175, 47, 47, 0.1);
 }
 
 .option {
